Add Call Statistics Feature:
Thanks to OmniRom/CyanogenMod:
https://github.com/omnirom/android_packages_apps_Dialer/commit/a5f038bb5f38b2f399d4bef05bb326051146193f

Changes:
- Minor changes for Holo Dark Theme
- Removed Blacklist feature

Conflicts:
	res/values/colors.xml
	res/values/dimens.xml
	src/com/android/dialer/CallDetailActivity.java
	src/com/android/dialer/calllog/CallLogAdapter.java

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -135,4 +135,10 @@
     <!-- Color of action bar text. Ensure this stays in sync with packages/Telephony
          phone_settings_actionbar_text_color-->
     <color name="actionbar_text_color">#FFFFFF</color>
+
+    <!-- Colors for incoming and outgoing calls in the call statistics -->
+    <color name="call_stats_incoming">#33b5e5</color>
+    <color name="call_stats_outgoing">#99cc00</color>
+    <color name="call_stats_missed">#eb1313</color>
+    <color name="call_stats_bar_background">#88888888</color>
 </resources>
