--- a/res/menu/call_details_options.xml
+++ b/res/menu/call_details_options.xml
@@ -32,6 +32,11 @@
         android:onClick="onMenuEditNumberBeforeCall"
     />
     <item
+        android:id="@+id/menu_add_to_blacklist"
+        android:title="@string/menu_add_to_blacklist"
+        android:onClick="onMenuAddToBlacklist"
+    />
+    <item
         android:id="@+id/menu_reverse_lookup"
         android:title="@string/recentCalls_reverseLookup"
         android:onClick="onMenuReverseLookup"
