--- a/res/layout/dialtacts_activity.xml
+++ b/res/layout/dialtacts_activity.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/search_and_remove_view_container"
+                android:background="@color/background_dialer_light"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
